--- a/cachchoi.html
+++ b/cachchoi.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Ahri</title>
+	<link rel="icon" href="IMG/ahri-icon.png" />
 	<link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap&subset=vietnamese" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -33,23 +34,31 @@
 			<a href="runes.html" class="read">Hướng dẫn</a>
 		</div>
 		<div class="support-spell">
-			<h2 class="content">Nên dùng phép bổ trợ nào cho Riven</h2>
+			<h2 class="content">Cách lên đồ Ahri Mid full AP</h2>
 			<a href="support_spell.html" class="read">Hướng dẫn</a>
 		</div>
 		<div class="weak-strong">
-			<h2 class="content">Điểm yếu và điểm mạnh của Riven</h2>
+			<h2 class="content">Cách chơi Ahri</h2>
 			<a href="strong_weak.html" class="read">Hướng dẫn</a>
 		</div>
 		<div class="skill-road">
-			<h2 class="content">Cách nâng tuyệt kỹ cho Riven</h2>
+			<h2 class="content">Vị trí của Ahri</h2>
 			<a href="skill_road.html" class="read">Hướng dẫn</a>
 		</div>
 		<div class="items">
-			<h2 class="content">Cách nâng đồ cho Riven</h2>
+			<h2 class="content">Phép bổ trợ Ahri</h2>
 			<a href="item_road.html" class="read">Hướng dẫn</a>
 		</div>
 		<div class="guide">
-			<h2 class="content">Hướng dẫn chơi Riven</h2>
+			<h2 class="content">Điểm mạnh & yếu Ahri</h2>
+			<a href="guide.html" class="read">Hướng dẫn</a>
+		</div>
+		<div class="guide">
+			<h2 class="content">Bảng kỹ năng Ahri</h2>
+			<a href="guide.html" class="read">Hướng dẫn</a>
+		</div>
+		<div class="guide">
+			<h2 class="content">Khắc chế Ahri</h2>
 			<a href="guide.html" class="read">Hướng dẫn</a>
 		</div>
 	</div>
