--- a/readmore/readmore_02.html
+++ b/readmore/readmore_02.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Ahri</title>
+	<link rel="icon" href="IMG/ahri-icon.png" />
 	<link rel="stylesheet" type="text/css" href="../tuyetky/skill.css">
 	<link rel="stylesheet" type="text/css" href="biography.css">
 	<link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700&display=swap" rel="stylesheet">
