--- a/trangphuc.html
+++ b/trangphuc.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Ahri</title>
+	<link rel="icon" href="IMG/ahri-icon.png" />
 	<link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap&subset=vietnamese" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
